Export dati pseudo-anonimizzati in parquet, gestione incrementale (WIP)