@@ -29,6 +29,21 @@
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.3.0</version>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <argLine>
+                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens java.base/sun.security.action=ALL-UNNAMED
+                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
+                            -Xmx4g
+                        </argLine>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
 
@@ -38,7 +53,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>it.pagopa.pn.scripts.data.invoicing.costs.CostMapLoader</mainClass>
+                    <mainClass>it.pagopa.pn.scripts.commands.CommandsMain</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -62,6 +77,12 @@
             <artifactId>sso</artifactId>
             <version>2.20.45</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatchlogs</artifactId>
+            <version>2.20.109</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -92,7 +113,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.6.0</version>
+            <version>7.7.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
